# CRogue

./: local.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/crogue/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/crouge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crogue.cpp
app/src/main/java/com/example/crogue/: BlankFragment.kt  Credits.kt  GameActivity.kt  GameView.java  Login.kt  Lplayers.kt  MainActivity.kt  MainMenu.kt  Menu.kt  Player.kt  Register.kt  Splash.kt  StartScreen.kt  list_players.kt  test_Khadija.kt
app/src/main/java/com/example/crogue/adapter/: PlayerAdapter.kt  PlayerViewHolder.kt
app/src/main/java/com/example/crouge/: MainActivity.kt
app/src/main/res/drawable/: mybutton.xml
app/src/main/res/layout/: activity_credits.xml  activity_game.xml  activity_login.xml  activity_lplayers.xml  activity_main.xml  activity_menu.xml  activity_register.xml  activity_startscreen.xml  activity_test_khadija.xml  fragment_blank.xml  item_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ca-rES/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/crogue/: ExampleUnitTest.kt
app/src/test/java/com/example/crouge/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
